part5/e2/deployment_1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql-ss
  namespace: project-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgapp
  serviceName: pgsql
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: pgapp
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: pgsql-pwd
        image: postgres:12
        name: postgres
        ports:
        - containerPort: 5432
          name: pgsql
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
      storageClassName: local-path
