part5/e2/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql-svc
  namespace: project-ns
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: pgapp
---
apiVersion: v1
kind: Service
metadata:
  namespace: project-ns
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: project-ns
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 2346
    protocol: TCP
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: project-ns
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: backend-svc
          servicePort: 2345
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 2346
